<resources>
    <string name="app_name">DALI Lab</string>
    <string name="inDALITextInside">In DALI Lab</string>
    <string name="inDALITextOutside">Not In DALI Lab</string>
    <string name="noFoodLabel">No Food Tonight</string>
    <string name="foodLabel">Food Tonight:</string>
    <string name="upcomingEvents">Upcoming Events</string>
    <string name="server_client_id">332937749798-bine77sqgs2gstjmpjgvcl5smsdvnl4t.apps.googleusercontent.com</string>

    <!-- Content Description -->
    <string name="backgroundImageContentDescription">Background image</string>
    <string name="daliLabIconContentDescription">DALI Lab icon</string>
    <string name="separatorContentDescription">DALI Lab icon</string>
    <string name="devicesImageContentDescription">Devices</string>
    <string name="lightImageContentDescription">Lights</string>
    <string name="peopleImageContentDescription">People</string>
    <string name="voteImageContentDescription">Vote</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="notifyEnterExit">Enter or Exit the Lab</string>
    <string name="notifyEnterExitDetail">Will notify you when you enter or exit the lab to welcome you back</string>

    <string name="notifyCheckIn">Check In To Events</string>
    <string name="notifyCheckInDetail">Will notify you when you are checked into an event</string>

    <string name="notifyVoting">Enter Voting Event</string>
    <string name="notifyVotingDetail">Will notify you when voting is available for an event you are at</string>

    <string name="share">Share when I\'m in the lab</string>
    <string name="shareDetail">Will include your name on the list of people in the lab while you are in DALI</string>

    <!-- Lights -->
    <string name="noGroupSelected">No group selected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
