<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:title="Sign out" android:key="signOut"/>

    <PreferenceCategory
            android:title="Notifications"
        >
        <SwitchPreference
                android:key="notifyEnterExitLab"
                android:title="@string/notifyEnterExit"
                android:summary="@string/notifyEnterExitDetail"
                android:defaultValue="false"/>

        <SwitchPreference
                android:key="notifyCheckIn"
                android:title="@string/notifyCheckIn"
                android:summary="@string/notifyCheckInDetail"
                android:defaultValue="true"/>

        <SwitchPreference
                android:key="notifyVoting"
                android:title="@string/notifyVoting"
                android:summary="@string/notifyVotingDetail"
                android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
    android:title="Location">

        <SwitchPreference
                android:key="sharing"
                android:title="@string/share"
                android:summary="@string/shareDetail"
                android:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>
