<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/coordinatorLayout">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:theme="@style/AppTheme.NoActionBar"
            android:id="@+id/appBarLayout">

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" android:id="@+id/include"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/background" android:id="@+id/backgroundImageView"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/backgroundImageContentDescription"/>
    <ImageView
            android:layout_width="151dp"
            android:layout_height="56dp" app:srcCompat="@drawable/dali_white_logo"
            android:id="@+id/daliLogoImageView" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="@+id/backgroundImageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="@string/daliLabIconContentDescription"/>
    <Button
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/settingsButton" android:background="@drawable/white_gear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="45dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="23dp"
            android:layout_height="29dp"
            android:id="@+id/voteButton" android:background="@drawable/vote"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/bottomButtonGuidline"
            app:layout_constraintBottom_toTopOf="@+id/bottomButtonGuidline"
            app:layout_constraintVertical_bias="0.621"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6" android:layout_marginEnd="8dp"/>
    <Button
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:id="@+id/deviceButton" android:background="@drawable/devices"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomButtonGuidline"
            app:layout_constraintTop_toTopOf="@+id/bottomButtonGuidline"
            app:layout_constraintVertical_bias="0.333"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="8dp"/>
    <Button
            android:layout_width="26dp"
            android:layout_height="30dp"
            android:id="@+id/lightButton" android:background="@drawable/light_bulb"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomButtonGuidline"
            app:layout_constraintTop_toTopOf="@+id/bottomButtonGuidline"
            app:layout_constraintVertical_bias="0.394" app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginStart="8dp"/>
    <Button
            android:layout_width="30dp"
            android:layout_height="22dp"
            android:id="@+id/peopleButton" android:background="@drawable/people"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/bottomButtonGuidline"
            app:layout_constraintTop_toTopOf="@+id/bottomButtonGuidline" app:layout_constraintVertical_bias="0.233"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/inDALITextInside"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:id="@+id/daliLabLocationTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/daliLogoImageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textStyle="italic" android:textColor="@android:color/white" android:textSize="16sp"/>
    <TextView
            android:text="@string/noFoodLabel"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/foodTextView"
            app:layout_constraintTop_toBottomOf="@+id/daliLabLocationTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@android:color/white" android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.501"/>
    <ImageView
            android:id="@+id/separator"
            android:layout_height="2dp"
            android:layout_width="0dp"
            android:src="@drawable/rectangle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/foodTextView" android:layout_marginTop="4dp"
            android:contentDescription="@string/separatorContentDescription">
    </ImageView>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/bottomButtonGuidline"
                                          android:orientation="horizontal" app:layout_constraintGuide_end="98dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/upcomingEventsTextView" android:textSize="24sp"
            android:textColor="@android:color/white" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/foodTextView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
            android:text="@string/upcomingEvents"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.3"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.7"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5"
                                          android:orientation="vertical" app:layout_constraintGuide_percent=".1"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.9"/>

</android.support.constraint.ConstraintLayout>